parte 2 das regras

--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
         <div class="item">Item 11</div>
         <div class="item">Item 12</div>
     </div>
+
+    <script>
+        alert("Olá Mundo eu sou um alerta!");
+        document.write("Olá mundo eu sou um document.write()");
+        console.log("Olá Mundo eu sou o console");
+        document.getElementById("primeira-div").innerHTML="Olá Mundo eu sou um document.getElementyById!";
+ 
+     var nome = prompt("Informe o seu NOME:");
+     document.getElementById("primeira-div").innerHTML=("O seu nome é" + nome);
+     alert("Seu nome é " + nome);
+    </script>
 </body>
 
 </html>
